@@ -44,6 +44,7 @@
  ("exwm" . "26d24e534a227d3d4de199f8ae3d098ef647f71d")
  ("exwm-firefox" . "4c638abc668e24fc7df0e361fc10b9e594e456f8")
  ("exwm-firefox-core" . "e2fe2a895e8f973307ef52f8c9976b26e701cbd0")
+ ("exwm-ns" . "9b5ca12c5079e0afc6545241fb7a1c208673675a")
  ("f.el" . "931b6d0667fe03e7bf1c6c282d6d8d7006143c52")
  ("flymake" . "9c09445338a25f373926add921808d585aa89222")
  ("geiser" . "97ce88463f346ff0dab147334fa0ce7b81569d7c")
@@ -108,7 +109,7 @@
  ("toml-mode.el" . "f6c61817b00f9c4a3cab1bae9c309e0fc45cdd06")
  ("track-changes" . "fc64bead78b510877be462d802a6216c6d70f00a")
  ("transducers.el" . "f8f46db6ddba6641669160fffb3f98213ab5b213")
- ("transient" . "000ff15942878aa1108abaa020da86ada675fea9")
+ ("transient" . "ab22ba0e3b4c088b2981b22857fa09211a2c74ee")
  ("vala-mode" . "d696a8177e94c81ea557ad364a3b3dcc3abbc50f")
  ("vertico" . "7f36ecf5a550b7605da3433448970448deac4bb3")
  ("vundo" . "d5869788a06f08d652d4786574ab546b71d57964")
